--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
 					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
 						<img class="w3-image" src="./images/home_crop.jpg" alt="home" height="100%">
 							<div class="w3-display-bottomleft w3-padding-large">
-								<h1 style="color: white; opacity: 1">
+								<h1 style="color:white;opacity:1">
 									<b>PEOPLE</b>
 								</h1>
 							</div>
@@ -72,7 +72,7 @@
 													<div>
 														<h5>Shane Guenin</h5>
 														<p style="color: grey">M.S. Student / shane dot guenin at uga dot edu</p>
-														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+														<p>Shane received his B.S. in Recreation, Parks, & Leisure Services from Central Michigan University where he studied wild rice genetics and the impacts of hiking trails on small mammal populations. He is currently an M.S. student at Warnell's School of Forestry and Natural Resources. Shane is studying risk assessment in ducks to better understand and help to reduce avian-vehicle collisions. He is interested in cognitive ecology, human-wildlife interactions, and natural resource policy.</p>
 													</div>
 													<img src="./images/jon.jpg" class="w3-round" alt="jon" width="100%" height="auto" style="margin-top:5%">
 														<div>
