--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
 										<div>
 											<img src="./images/plane.jpg" class="w3-round" alt="plane" width="100%" height="auto">
 												<img src="./images/lightbar.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%">
-												<img src="./images/deer.jpg" class="w3-round" alt="deer" width="100%" height="auto" style="padding-top:10%">
+												<img src="./images/deer2.jpg" class="w3-round" alt="deer2" width="100%" height="auto" style="padding-top:10%">
 												</div>
 											<div>
 												<p>Animal-vehicle collisions (AVCs) are ubiquitous across the developed world. AVCs cause billions of animal deaths each year and pose substantial safety threats and economic costs to people. Research on AVCs in the DeVault Lab is focused on learning why AVCs occur by investigating what goes wrong from the animal’s perspective when they are struck by vehicles. DeVault Lab members then apply that knowledge to the development of mitigation measures designed to reduce collisions.</p>
