--- a/index.html
+++ b/index.html
@@ -21,14 +21,8 @@
 							</div>
 						</div>
 						<!-- Header -->
-						<header class="w3-display-container w3-auto w3-wide" id="home">
-							<img src="./images/home.jpg" alt="home" style="max-height:100vh;margin-left:auto;margin-right:auto">
-								<div class="w3-display-bottomleft w3-padding-large">
-									<h1 style="color:white;opacity:1">
-										<b>DeVAULT WILDLIFE LAB</b>
-									</h1>
-									<p style="color: white;">at University of Georgia&mdash;Savannah River Ecology Lab</p>
-								</div>
+						<header style="display:flex;align-items:center;min-height:300px">
+							<img src="./images/home.jpg" width="50%" alt="home">
 							</header>
 							<!-- Page content -->
 							<div class="w3-content">
