--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 						</div>
 						<!-- Header -->
 						<header class="w3-display-container w3-content">
-							<img class="w3-image" src="./images/home.jpg" alt="home" height="80vh">
+							<img class="w3-image" src="./images/home.jpg" alt="home">
 							<div class="w3-display-bottomleft w3-padding-large">	
-							<h1 style="color:white;opacity:1"><b>DeVAULT WILDLIFE LAB</b></h1>
-							<p class="w3-wide" style="color:white;opacity:1">at the University of Georgia-Savannah River Ecology Lab</p>
+								<h1 style="color:white;opacity:1"><b>DeVAULT WILDLIFE LAB</b></h1>
+								<p class="w3-wide" style="color:white;opacity:1">at the University of Georgia&mdash;Savannah River Ecology Lab</p>
 							</div>
-							</header>
+						</header>
 							<!-- Page content -->
 							<div class="w3-content">
 								<!-- What We Do -->
