--- a/research.html
+++ b/research.html
@@ -54,9 +54,9 @@
 												<div class="w3-container w3-padding-16">
 												<div class="grid-container">
 												<div>
-													<img src="./images/rwbb.jpg" class="w3-round" alt="rwbb" width="100%" height="auto">
+													<img src="./images/rwbb.JPG" class="w3-round" alt="rwbb" width="100%" height="auto">
 													<img src="./images/dike.jpg" class="w3-round" alt="dike" width="100%" height="auto" style="margin-top:10%">
-													<img src="./images/mallard2.jpg" class="w3-round" alt="mallard2" width="100%" height="auto" style="margin-top:10%">
+													<img src="./images/mallard2.JPG" class="w3-round" alt="mallard2" width="100%" height="auto" style="margin-top:10%">
 													</div>
 														<div>
 															<p>Ongoing research in our lab uses integrated approaches to examine the interactions of natural and anthropogenic contaminants, such as heavy metals and radioactivity, and birds at the individual, population, and ecosystem scales. Much of the ecotoxicology work we do tends to focus on birds because they are visible, widespread, and commonly regarded as reliable indicator species. Outcomes contribute to our understanding of exposure and sensitivity of birds and other wildlife to environmental contaminants with the goal of identifying management and conservation solutions that promote wildlife and human health.</p>
