--- a/collaborators.html
+++ b/collaborators.html
@@ -64,6 +64,7 @@
 									<a href="https://www.warnell.uga.edu/people/adjunct-faculty/xiaoyu-xu" title="Dr. Xiaoyu Xu" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Xiaoyu Xu, UGA SREL</h4>
 									</a>
+									<a href="https://www.esf.edu/faculty/belant/" title="Dr. Jerrold L. Belant" target="_blank" class="w3-hover-text-green"><h4>Dr. Jerry Belant, SUNY ESF</h4></a>
 								</div>
 								<!-- End page content -->
 							</div>
