--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 													<img src="./images/srel.webp" class="w3-round w3-image" alt="where" width="100%" height="auto" style="margin-top:25%"></div>
 												<div>
 													<h1 class="w3-center">Where We Work</h1>
-													<p class="w3-large">The Savannah River Ecology Lab (SREL), a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
+													<p class="w3-large"><a href="srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">The Savannah River Ecology Lab (SREL)</a>, a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
 												</div>
 											</div>
 											</div>
