--- a/people.html
+++ b/people.html
@@ -67,12 +67,14 @@
 													<h5>Carson Pakula</h5>
 													<p style="color: grey">M.S. Student / carson dot pakula at uga dot edu</p>
 													<p>Carson received his B.S. in Biology from Central Michigan University where he studied black footed ferret genetics and the impacts of hiking trails on small mammal populations. He is currently an M.S. student at Warnell's School of Forestry and Natural Resources. Carson is studying the behavior of deer and wild pigs to help reduce wildlife-vehicle collisions. He is interested in behavioral ecology, wildlife conservation, and human-wildlife interactions.</p>
+													<p>Carson is co-advised by Dr. Gene Rhodes.</p>
 												</div>
 												<img src="./images/shane.jpg" class="w3-round" alt="shane" width="100%" height="auto" style="margin-top:5%">
 													<div>
 														<h5>Shane Guenin</h5>
 														<p style="color: grey">M.S. Student / shane dot guenin at uga dot edu</p>
 														<p>Shane received his B.S. in Recreation, Parks, & Leisure Services from Central Michigan University where he studied wild rice genetics and the impacts of hiking trails on small mammal populations. He is currently an M.S. student at Warnell's School of Forestry and Natural Resources. Shane is studying risk assessment in ducks to better understand and help to reduce avian-vehicle collisions. He is interested in cognitive ecology, human-wildlife interactions, and natural resource policy.</p>
+														<p>Shane is co-advised by Dr. James Martin.</p> 
 													</div>
 													<img src="./images/jon.jpg" class="w3-round" alt="jon" width="100%" height="auto" style="margin-top:5%">
 														<div>
