--- a/collaborators.html
+++ b/collaborators.html
@@ -61,10 +61,10 @@
 									<a href="https://www.ecology.uga.edu/directory/o-e-gene-rhodes/" title="Dr. Olin Gene Rhodes" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Olin Gene Rhodes, UGA SREL</h4>
 									</a>
-									<a href="https://www.warnell.uga.edu/people/adjunct-faculty/xiaoyu-xu" title="Dr. Xiaoyu Xu" target="_blank" class="w3-hover-text-green">
+									<a href="https://www.xiaoyuxulab.com/" title="Dr. Xiaoyu Xu" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Xiaoyu Xu, UGA SREL</h4>
 									</a>
-									<a href="https://www.esf.edu/faculty/belant/" title="Dr. Jerrold L. Belant" target="_blank" class="w3-hover-text-green"><h4>Dr. Jerry Belant, SUNY ESF</h4></a>
+									<a href="https://campfirewildlife.com/" title="Dr. Jerrold L. Belant" target="_blank" class="w3-hover-text-green"><h4>Dr. Jerry Belant, SUNY ESF</h4></a>
 								</div>
 								<!-- End page content -->
 							</div>
