--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 										<div>
 											<h1 class="w3-center">What We Do</h1>
 											<p class="w3-large">The DeVault Wildlife Lab is a research group at the
-												<a href="srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory.</a>
+												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory.</a>
 												We apply behavioral and ecological concepts to problems arising from wildlife-human interactions, especially with regard to understanding and mitigating animal-vehicle collisions and the conservation and ecology of vertebrate scavengers. As such, our research interests span basic ecology to conservation and management. Although much of our work involves birds, our research is question-driven rather than strictly taxonomically-focused. Our work is highly collaborative and interdisciplinary. Welcome to our site, browse these pages, and let us know if you have questions or comments.
 											</p>
 										</div>
@@ -51,18 +51,24 @@
 													<img src="./images/srel.webp" class="w3-round w3-image" alt="where" width="100%" height="auto" style="margin-top:25%"></div>
 												<div>
 													<h1 class="w3-center">Where We Work</h1>
-													<p class="w3-large"><a href="srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">The Savannah River Ecology Lab (SREL)</a>, a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
+													<p class="w3-large"><a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">The Savannah River Ecology Lab (SREL)</a>, a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
 												</div>
 											</div>
 											</div>
 											<hr>
-		
-											
-												<!-- News section -->
-												<div class="w3-row w3-padding-32">
-													<div style="margin: 0 auto; width: 80%" id="news">
-														<a class="twitter-timeline" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent News from DeVault Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-													</div>
+											<!-- News section -->
+										<div class="w3-container w3-padding-32" id="where">
+											<div class="grid-container">
+												<div>
+													<a class="twitter-timeline" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent News from DeVault Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+												</div>
+												<div>
+													<h1 class="w3-center">Recent News</h1>
+													 <ul class="w3-large">
+													  <li>Coming soon</li>
+													  <li></li>
+													  <li></li>
+													</ul> 
 												</div>
 											</div>
 											</div>
