--- a/people.html
+++ b/people.html
@@ -35,12 +35,11 @@
 							<div class="grid-container">
 								<div>
 									<img src="./images/travis2.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="margin-top:5%">
-										</div>
+								</div>
 									<div>
-										<h5>Travis DeVault, Ph.D</h5>
+										<h5>Travis DeVault, Ph.D.</h5>
 										<p style="color: grey">Principal Investigator / travis dot devault at uga dot edu /
 											<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a></p>
-											<img src="./images/travis3.jpg" class="w3-round" alt="travis3" width="100%" height="auto">
 											<p>Travis DeVault is the Associate Director for Research and Senior Research Scientist at the
 												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory (SREL)</a>. He also has a courtesy faculty appointment in the
 												<a href="https://www.warnell.uga.edu/" title="Warnell School of Forestry & Natural Resources" target="_blank" class="w3-hover-text-green">Warnell School of Forestry & Natural Resources</a>
@@ -50,11 +49,16 @@
 												<a href="https://ag.purdue.edu/fnr/Pages/default.aspx" title="Department of Forestry and Natural Resources at Purdue University" target="_blank" class="w3-hover-text-green">Department of Forestry and Natural Resources at Purdue University</a>. Travis is a wildlife ecologist and conservation biologist; his research focuses on understanding and preventing animal-vehicle collisions and other human-wildlife conflicts. He also maintains a long term research interest in the ecology of vultures and other vertebrate scavengers. Outside of work, Travis is a jack of all trades and master of none. He’s an eclectic sort who enjoys fishing, hunting, kayaking and canoeing, hiking with his family, wrestling with his dogs, playing basketball, obsessing over Chicago Cubs baseball and Indianapolis Colts football, blues guitar, tinkering in his woodshop, and playing video games while consuming bourbon and scotch. Actually, he is pretty good at that last one.
 											</p>
 									</div>
+									</div>
+									<div><img src="./images/travis3.jpg" class="w3-round" alt="travis3" width="80%" height="auto" style="margin:-10% 10% 0;text-align:center">
+									</div>
+									<div class="w3-container w3-padding-64">
+									<div class="grid-container">
 									<img src="./images/mary.jpg" class="w3-round" alt="mary" width="100%" height="auto"  style="margin-top:5%">
 										<div>
-											<h5>Mary Chapman</h5>
+											<h5>Mary Chapman, M.S.</h5>
 											<p style="color: grey">Project Coordinator / mary dot chapman at uga dot edu</p>
-											<p>Mary leads a study looking at heavy metals in birds that utilize a constructed wetland that receives industrial wastewater. She received her B.S. and M.S. in Environmental Science at Taylor University, Indiana. Her masters research looked at species richness of neotropical migrant birds at different forest corridor widths along an Indiana river adjacent to farmland. The goal was to determine how wide farmers would need to keep their corridors to provide habitat for a diverse array of bird species. Mary is interested in avian ecology and enjoys birding and hiking in her free time. She is working on passing her love of birds and nature on to her 5-year-old son.</p>
+											<p>Mary leads a study looking at heavy metals in birds that utilize a constructed wetland that receives industrial wastewater. She received her B.S. and M.S. in Environmental Science at Taylor University, Indiana. Her master's research looked at species richness of neotropical migrant birds at different forest corridor widths along an Indiana river adjacent to farmland. The goal was to determine how wide farmers would need to keep their corridors to provide habitat for a diverse array of bird species. Mary is interested in avian ecology and enjoys birding and hiking in her free time. She is working on passing her love of birds and nature on to her 5-year-old son.</p>
 										</div>
 										<img src="./images/shayna.jpg" class="w3-round" alt="shayna" width="100%" height="auto" style="margin-top:5%">
 											<div>
@@ -78,11 +82,11 @@
 													</div>
 													<img src="./images/jon.jpg" class="w3-round" alt="jon" width="100%" height="auto" style="margin-top:5%">
 														<div>
-															<h5>Jon Skaggs</h5>
+															<h5>Jon Skaggs, M.S.</h5>
 															<p style="color: grey">Lab Manager / jskaggs at uga dot edu /
 																<a href="https://www.github.com/jskaggs2" title="github/jskaggs2" target="_blank">Github</a>
 															</p>
-															<p>Jon manages day to day DeVault Lab stuff and leads our bird monitoring fieldwork associated with the Savannah Harbor Expansion Project. He recieved a B.S. in Ecology and M.S. in Conservation Ecology and Sustainable Development from UGA's Odum School of Ecology. His masters research developed and applied quantiative conservation planning techniques to a freshwater biodiversity hotspot, the Upper Coosa River System. Jon is interested in ecotoxicology, watershed ecology, and spatial analysis. He also likes to ride and wrench on bikes and get lost in the woods. Jon built and maintains this website; if you see something strange, or are interested in the site itself, please reach out.</p>
+															<p>Jon manages day to day DeVault Lab stuff and leads our bird monitoring fieldwork associated with the Savannah Harbor Expansion Project. He recieved a B.S. in Ecology and M.S. in Conservation Ecology and Sustainable Development from UGA's Odum School of Ecology. His master's research developed and applied quantiative conservation planning techniques to a freshwater biodiversity hotspot, the Upper Coosa River System. Jon is interested in ecotoxicology, watershed ecology, and spatial analysis. He also likes to ride and wrench on bikes and get lost in the woods. Jon built and maintains this website; if you see something strange, or are interested in the site itself, please reach out.</p>
 														</div>
 													</div>
 												</div>
