--- a/publications.html
+++ b/publications.html
@@ -29,19 +29,27 @@
 							</div>
 						</header>
 						<!-- Page content -->
-						<div class="w3-content" style="padding-top:32px">
+						<div class="w3-content" style="padding-top:32px" id="Top">
 							<div class="w3-container w3-padding-16" style="background-color: #f1f1f1">
-								<p style="font-size:large">If you would like a digital copy of any of these publications, DO NOT PAY FOR IT. Scientists don’t get paid for the articles they publish; in fact, we often must pay the journals to publish them. If you would like to read any of these papers, first try searching my pages on Research Gate or Google Scholar. Also, most of the papers I published when I was a federal employee from 2006–2019 are available on the
-									<a href="https://nwrc.contentdm.oclc.org/digital/collection/NWRCPubs1National" title="USDA NWRC" target="_blank" class="w3-hover-text-green">Wildlife Research Center website.</a>
-									If none of that works, just send me an email and I’ll be happy to send you a copy directly. Thanks for your interest in our lab’s research! &mdash;Travis
+								<p style="font-size:large">If you would like a digital copy of any of these publications, DO NOT PAY FOR IT. Scientists don’t get paid for the articles they publish; in fact, we often must pay the journals to publish them. If you would like to read any of these papers, first try searching my pages on <a href="https://www.researchgate.net/profile/Travis-Devault-2" title="DeVault ResearchGate" target="_blank" class="w3-hover-text-green">Research Gate</a> or <a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a>. Also, most of the papers I published when I was a federal employee from 2006–2019 are available on the
+									<a href="https://www.aphis.usda.gov/aphis/ourfocus/wildlifedamage/programs/nwrc/SA_Publications/CT_Research_gateway" title="USDA NWRC" target="_blank" class="w3-hover-text-green">Wildlife Research Center website.</a>
+									If none of that works, just send me an email and I’ll be happy to send you a copy directly. Thanks for your interest in our lab’s research! We'll try to update this list every few months. &mdash;Travis
 								</p>
 							</div>
-							<div class="w3-container w3-padding-32">
-								<h2>Edited Book</h2>
+							<div class="w3-container w3-padding-16">							
+							<h2><a href="#Edited Books" class="w3-hover-text-green">Edited Books</a></h2>
+							<h2><a href="#Book Chapters and Monographs" class="w3-hover-text-green">Book Chapters and Monographs</a></h2>
+							<h2><a href="#Peer-Reviewed Journal Articles" class="w3-hover-text-green">Peer-Reviewed Journal Articles</a></h2>
+							<h2><a href="#Other Publications" class="w3-hover-text-green">Other Publications</a></h2>						
+							</div>
+							<div class="w3-container w3-padding-32" id="Edited Books">
+								<h2>Edited Books</h2>
 								<div style="text-indent: -36px; padding-left: 36px;">
 									<p>DeVault, T. L., B. F. Blackwell, and J. L. Belant, eds. 2013. Wildlife in Airport Environments: Preventing Animal–Aircraft Collisions through Science-Based Management. Johns Hopkins University Press, Baltimore, MD, USA. 181 pp.</p>
+									<p class="w3-wide"><a href="#Top" class="w3-hover-text-green">Return to top</a></p>
 								</div>
 								<hr>
+								<div id="Book Chapters and Monographs">
 									<h2>Book Chapters and Monographs</h2>
 									<div style="text-indent: -36px; padding-left: 36px;">
 										<p>Selva, N., M. Moleón, E. Sebastián-González, T. L. DeVault, M. M. Quaggiotto, D. M. Bailey, S. A. Lambertucci, and A. Margalida. 2019. Vertebrate scavenging communities. Pages 71-99 in: Carrion Ecology and Management. P. P. Olea, P. Mateo-Tomás, and J. A. Sánchez-Zapata, eds. Springer, Wildlife Research Monographs, Vol. 2.</p>
@@ -57,10 +65,12 @@
 										<p>Belant, J. L., B. E. Washburn, and T. L. DeVault. 2013. Understanding animal movements at and near airports. Pages 129-138 in: Wildlife in Airport Environments: Preventing Animal–Aircraft Collisions through Science-Based Management. T. L. DeVault, B. F. Blackwell, and J. L. Belant, eds. Johns Hopkins University Press, Baltimore, MD, USA.</p>
 										<p>Belant, J. L., T. L. DeVault, and B. F. Blackwell. 2013. Conclusions and future directions. Pages 167-170 in: Wildlife in Airport Environments: Preventing Animal–Aircraft Collisions through Science-Based Management. T. L. DeVault, B. F. Blackwell, and J. L. Belant, eds. Johns Hopkins University Press, Baltimore, MD, USA.</p>
 										<p>Martin, J. A., J. L. Belant, and T. L. DeVault. 2013. Bird harassment, repellent, and deterrent techniques for use on and near airports. Human-Wildlife Conflicts Monograph 2:1-43.</p>
+										<p class="w3-wide"><a href="#Top" class="w3-hover-text-green">Return to top</a></p>
+									</div>
 									</div>
 									<hr>
-										<div>
-											<h2>Peer-Reviewed Journal Articles</h2>
+										<div id="Peer-Reviewed Journal Articles">
+											<h2 >Peer-Reviewed Journal Articles</h2>
 										</div>
 										<div style="text-indent: -36px; padding-left: 36px;">
 											<p>Arrondo, E., M. Garcia-Alfonso, J. Blas, A. Cortes-Avizanda, M. De La Riva, T. L. DeVault, W. Fiedler, A. Flack, J. Jimenez, S. A. Lambertucci, A. Margalida, P. Oliva-Vidal, L. Phipps, J. A. Sanchez-Zapata, M. Wikelski, and J. A. Donazar. 2021. Use of avian GPS tracking to mitigate human fatalities from bird strikes caused by large soaring birds. Journal of Applied Ecology: In Press.</p>
@@ -178,9 +188,11 @@
 											<p>DeVault, T. L., P. E. Scott, R. A. Bajema, and S. L. Lima. 2002. Breeding bird communities of reclaimed coal mine grasslands in the American Midwest. Journal of Field Ornithology 73:268-275.</p>
 											<p>Scott, P. E., T. L. DeVault, R. A. Bajema, and S. L. Lima. 2002. Grassland vegetation and bird abundances on reclaimed midwestern coal mines. Wildlife Society Bulletin 30:1006-1014.</p>
 											<p>Bajema, R. A., T. L. DeVault, P. E. Scott, and S. L. Lima. 2001. Reclaimed coal mine grasslands and their significance for Henslow’s sparrows in the American Midwest. The Auk 118:422-431.</p>
+											<p class="w3-wide"><a href="#Top" class="w3-hover-text-green">Return to top</a></p>
 										</div>
 										<hr>
-											<div>
+										<div id="Other Publications">
+											<div >
 												<h2>Peer-Edited Articles, Letters, Outreach Materials, Conference Proceedings, Book Reviews, Popular Literature, and Other Publications</h2>
 											</div>
 											<div style="text-indent: -36px; padding-left: 36px;">
@@ -203,7 +215,9 @@
 												<p>MacGowan, B. J., L. A. Humberg, J. C. Beasley, T. L. DeVault, M. I. Retamosa, and O. E. Rhodes, Jr. 2006. Corn and soybean crop depredation by wildlife. Purdue University Extension Publication FNR-265-W. 14 pp.</p>
 												<p>DeVault, T. L. 2005. Review of Food Webs at the Landscape Level, edited by G. A. Polis, M. E. Power, and G. R. Huxel. The University of Chicago Press, 530 pp. The Quarterly Review of Biology 80:140-141.</p>
 												<p>Senthil Kumar, K., W. W. Bowerman, T. L. DeVault, T. Takasuga, and S. Masunaga. 2002. Levels of PCDD/DFS and dioxin-like PCBs in blood of black and turkey vultures from the Savannah River Site, South Carolina, USA. Organohalogen Compounds 58:461-464.</p>
+												<p class="w3-wide"><a href="#Top" class="w3-hover-text-green">Return to top</a></p>
 											</div>
+										</div>
 										</div>
 										<!-- End page content -->
 									</div>
