--- a/research.html
+++ b/research.html
@@ -38,12 +38,12 @@
 									<div class="grid-container">
 										<div>
 											<img src="./images/plane.jpg" class="w3-round" alt="plane" width="100%" height="auto">
-												<img src="./images/lightbar.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%">
+												<img src="./images/videolab2.jpg" class="w3-round" alt="videolab2" width="100%" height="auto" style="padding-top:10%">
 												<img src="./images/deer2.jpg" class="w3-round" alt="deer2" width="100%" height="auto" style="padding-top:10%">
 												</div>
 											<div>
 												<p>Animal-vehicle collisions (AVCs) are ubiquitous across the developed world. AVCs cause billions of animal deaths each year and pose substantial safety threats and economic costs to people. Research on AVCs in the DeVault Lab is focused on learning why AVCs occur by investigating what goes wrong from the animal’s perspective when they are struck by vehicles. DeVault Lab members then apply that knowledge to the development of mitigation measures designed to reduce collisions.</p>
-												<h6 style="letter-spacing:3px">Mallard-vehicle collisions: flight initation and influence of nighttime</h6>
+												<h6 style="letter-spacing:3px">Mallard-vehicle collisions: ambient light and flight initiation distance</h6>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 												<h6 style="letter-spacing:3px">Vehicles and wild pig behavior and conspicuity</h6>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
