--- a/collaborators.html
+++ b/collaborators.html
@@ -37,11 +37,12 @@
 									<a href="http://beasleywildlifelab.srel.uga.edu/" title="Dr. Jim Beasley" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Jim Beasley, UGA SREL</h4>
 									</a>
+									<a href="https://campfirewildlife.com/" title="Dr. Jerrold L. Belant" target="_blank" class="w3-hover-text-green"><h4>Dr. Jerry Belant, SUNY ESF</h4></a>
 									<a href="https://www.aphis.usda.gov/aphis/ourfocus/wildlifedamage/programs/nwrc/sa_research/sa_scientists/ct-research-scientist-by-id?p=Blackwell_B" title="Dr. Brad Blackwell" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Brad Blackwell, USDA NWRC</h4>
 									</a>
 									<a href="https://sites.google.com/site/ainaracortesavizanda/" title="Dr. Ainara Cortes-Avizanda" target="_blank" class="w3-hover-text-green">
-										<h4>Dr. Ainara Cortes-Avizanda</h4>
+										<h4>Dr. Ainara Cortes-Avizanda, IMEDEA</h4>
 									</a>
 									<a href="http://www.gdharmarajan.com/" title="Dr. Guha Dharmarajan" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Guha Dharmarajan, UGA SREL</h4>
@@ -50,7 +51,7 @@
 										<h4>Dr. Esteban Fernandez-Juricic Lab, Purdue</h4>
 									</a>
 									<a href="https://twitter.com/rb_iglay?lang=en" title="Dr. Ray Iglay" target="_blank" class="w3-hover-text-green">
-										<h4>Dr. Ray Iglay Lab, Mississippi State</h4>
+										<h4>Dr. Ray Iglay Lab, MS State</h4>
 									</a>
 									<a href="https://twitter.com/gamebirddoc?lang=en" title="Dr. James Martin" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. James Martin, UGA</h4>
@@ -64,7 +65,6 @@
 									<a href="https://www.xiaoyuxulab.com/" title="Dr. Xiaoyu Xu" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Xiaoyu Xu, UGA SREL</h4>
 									</a>
-									<a href="https://campfirewildlife.com/" title="Dr. Jerrold L. Belant" target="_blank" class="w3-hover-text-green"><h4>Dr. Jerry Belant, SUNY ESF</h4></a>
 								</div>
 								<!-- End page content -->
 							</div>
