--- a/opportunities.html
+++ b/opportunities.html
@@ -45,9 +45,9 @@
 								</div>
 								</div>
 								<div class="w3-container w3-padding-16">
-								<h3>Prospective students</h3>
+								<h3>Prospective Students</h3>
 								<p>Please understand that we are a small research group by design, given that most of Dr. DeVault’s time is occupied by administrative duties at SREL. When we have openings they will be advertised below. Even so, feel free to contact Dr. DeVault or any other lab member by email if you are interested in our research program and might want to join our team.</p>
-								<p>Even if there are no open positions listed below in Current Opportunities, we are always interested in recuiting undergraduate researchers. If you are a current undergraduate student and are interested in joining our group, please reach out to our lab manager, Jon Skaggs (jskaggs at uga dot edu).</p>
+								<p>Even if there are no open positions listed below in Current Opportunities, we are always interested in recuiting undergraduate researchers. If you are a current undergraduate student and are interested in joining our group, please reach out to our lab manager, Jon Skaggs (jskaggs at uga dot edu). In your email please include a brief description of your personal research interests and why you'd like to join our lab. Thanks!</p>
 								</div>
 								<div class="w3-container w3-padding-16">
 								<h3>Current Opportunities</h3>
